WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
300472
[cocoa] MediaSample with mp3 content can't be serialised properly.
https://bugs.webkit.org/show_bug.cgi?id=300472
Summary
[cocoa] MediaSample with mp3 content can't be serialised properly.
Jean-Yves Avenard [:jya]
Reported
2025-10-09 16:38:52 PDT
CMUtilities code expect all MediaSample to have a cookieData; but that isn't true for mp3.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-10-09 16:38:58 PDT
<
rdar://problem/162324480
>
Jean-Yves Avenard [:jya]
Comment 2
2025-10-09 16:45:54 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/52093
EWS
Comment 3
2025-10-09 21:03:52 PDT
Committed
301295@main
(3c92e0f90a99): <
https://commits.webkit.org/301295@main
> Reviewed commits have been landed. Closing PR #52093 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug